--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 数字随风
+title: NZ BLOG
 SEOTitle: 数字随风 | 博客
 header-img: img/post-bg-desk.jpg
 email: ShadowXMAN@protonmail.com
