--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "WE LIVE IN MANIPULATION"
+sidebar-about-description: "WE LIVE IN MANIPULATION."
 sidebar-avatar: /img/avatar-z.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
